--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -27,10 +27,9 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="100dp"/>
 
-    <EditText
+    <TextView
             android:id="@+id/id_info_editText"
             android:layout_width="296dp"
-            android:editable="false"
             android:layout_height="285dp"
             android:inputType="textMultiLine"
             android:gravity="start|top"
@@ -61,5 +60,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.333">
     </com.google.android.gms.ads.AdView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
