--- a/app/src/main/res/values/Januar.xml
+++ b/app/src/main/res/values/Januar.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="svetitelji_januar">
 	<item>Свети мученик Бонифатије</item>
-	<item>Св. Игњатије Богоносац; Св. Данило, Други Арх. српски (Претпразништво Рождества) - Оци</item>
+	<item>Св. Игњатије Богоносац; Св. Данило, Оци</item>
 	<item>Света мученица Јулијана</item>
 	<item>Света великомученица Анастасија</item>
 	<item>Светих 10 мученика Критских</item>
