--- a/app/src/main/res/layout/activity_detail_kalendar.xml
+++ b/app/src/main/res/layout/activity_detail_kalendar.xml
@@ -27,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_backBtn_detail"
-        app:srcCompat="@drawable/cc" />
+        app:srcCompat="@drawable/cc"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/svetac"
@@ -44,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ikona"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/zitije"
         android:layout_marginBottom="8dp"/>
 
     <EditText
@@ -60,6 +61,8 @@
         android:inputType="none"
         android:clickable="false"
         android:cursorVisible="false"
+        android:contextClickable="false"
+        android:lines="1000"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:textAlignment="textStart"
@@ -71,7 +74,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/svetac"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:autofillHints="Text Zitija Svetitelja"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/id_detail_reklama"
