--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -30,6 +30,8 @@
         app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="100dp"/>
 
+
+    <!-- android:gravity="start|top"-->
     <TextView
             android:id="@+id/id_info_editText"
             android:layout_width="296dp"
