--- a/app/src/main/res/layout/activity_godisnji_kalendar.xml
+++ b/app/src/main/res/layout/activity_godisnji_kalendar.xml
@@ -17,7 +17,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:padding="5dp"
-            android:src="@drawable/arrow"
+        android:background="@color/colorBanana"
+        android:src="@drawable/ic_arrow_back_48px"
             android:contentDescription="@string/back_button"
             android:onClick="home_btn_click"/>
 
