--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -16,7 +16,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:padding="5dp"
-            android:src="@drawable/arrow"
+        android:background="@color/colorBanana"
+            android:src="@drawable/ic_arrow_back_48px"
             android:contentDescription="@string/back_btn_info_activity"
             android:onClick="nazad"/>
 
