--- a/app/src/main/res/layout/dan_cell.xml
+++ b/app/src/main/res/layout/dan_cell.xml
@@ -10,14 +10,16 @@
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/id_ikona_svetitelja"
                 android:contentDescription="@string/jesus"
                 android:layout_margin="10dp"
                 android:src="@drawable/jesus"
-                android:layout_width="100dp"
-                android:layout_height="100dp">
-        </ImageView>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/colorOrange">
+        </de.hdodenhof.circleimageview.CircleImageView>
     </LinearLayout>
     <LinearLayout
             android:layout_weight="1"
