--- a/app/src/main/res/layout/dan_cell.xml
+++ b/app/src/main/res/layout/dan_cell.xml
@@ -27,7 +27,7 @@
             android:orientation="vertical"
             android:layout_margin="10dp"
             android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_height="90dp">
         <TextView
                 android:id="@+id/id_ime_svetitelja"
                 android:text="@string/ime_svetitelja"
